--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: labs
+title: dhkaneda.labs
 email: dennishuynh@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A quiet place for tech, homelabbing, and thoughts in progress.
+  A quiet place for tech, homelabbing, and thoughts in progress
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
