--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: dhkaneda.labs
+title: daikon labs
 email: dennishuynh@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A quiet place for tech, homelabbing, and thoughts in progress
